--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" name="Description" content="This is a project based on fetching the contents of my Github repositories through the Github API. This will also be used for my altschool and 3mtt assessment." />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="stylesheet" href="App.css">
+    <!-- <link rel="stylesheet" href="App.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justine's Github repositories</title>
   </head>
